--- a/Google pay replicate/index.html
+++ b/Google pay replicate/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Pay</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -106,9 +106,9 @@
         Created by<br />
         <span
           ><a
-            href="https://www.linkedin.com/in/mayank-gupta-752328173/"
+            href="https://www.linkedin.com/in/namisha-gurunani-82808025b"
             target="blank"
-            >Mayank Gupta</a
+            >NAMISHA GURUNANI</a
           ></span
         >
       </h4>
