--- a/Google pay replicate/index.html
+++ b/Google pay replicate/index.html
@@ -10,14 +10,14 @@
     <div class="container">
       <div class="start">
         <div class="image">
-          <img src="./gpay-1.png" alt="" />
+          <img src="https://raw.githubusercontent.com/Mayankkatheriya/Google_pay_Payment/main/gpay-1.png" alt="" />
         </div>
         <button class="pay-now">Pay Now</button>
       </div>
       <div class="payment">
         <div class="nav">
           <i class="fa-solid fa-chevron-left" id="back"></i>
-          <img src="./gpay logo.webp" alt="" />
+          <img src="https://raw.githubusercontent.com/Mayankkatheriya/Google_pay_Payment/main/gpay%20logo.webp" alt="" />
           <i class="fa-solid fa-bars"></i>
         </div>
         <form action="">
