--- a/Dad Jokes generator/index.html
+++ b/Dad Jokes generator/index.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="style.css">
   <body>
     <div class="container animate__animated animate__backInDown">
       <h1 class="heading animate__animated animate__fadeInLeft">
@@ -33,6 +33,6 @@
       src="https://kit.fontawesome.com/08f45ad4dd.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
