--- a/Phone_Hunting_API/index.html
+++ b/Phone_Hunting_API/index.html
@@ -25,9 +25,9 @@
       </section>
       <section>
         <div class="sample-container">
-          <img src="./img-2.png" alt="" />
-          <img src="./img-1.png" alt="" />
-          <img src="./img-2.png" alt="" />
+        <img src="phone-1.png" alt="" />
+          <img src="phone-2.png" alt="" />
+          <img src="phone-1.png" alt="" />
         </div>
       </section>
       <h1 class="heading-3">Search Your Phone</h1>
